rolled back the changes to configure.in for libflaim and incorporated the patch that SuSE made for the FlaimWrapper Makefile.am
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6263 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/core/FlaimProvider/FlaimWrapper/Makefile.am
+++ b/simias/src/core/FlaimProvider/FlaimWrapper/Makefile.am
@@ -85,8 +85,8 @@ libFlaimWrapper_la_SOURCES = 	CSPObjectIterator.cpp \
 								resource.h
 
 if LINUX
-libFlaimWrapper_la_CXXFLAGS = $(LIBFLAIM_CFLAGS) -fshort-wchar -DFLAIMWRAPPER_EXPORTS -DUNIX -D_REENTRANT -c
-libFlaimWrapper_la_LDFLAGS = $(LIBFLAIM_LIBS)
+libFlaimWrapper_la_CXXFLAGS = -fshort-wchar -DFLAIMWRAPPER_EXPORTS -DUNIX -D_REENTRANT -c
+libFlaimWrapper_la_LDFLAGS = -lflaim
 
 install-exec-local: libFlaimWrapper.la
 	$(mkinstalldirs) $(DESTDIR)$(webbindir)
