--- a/simias/configure.in
+++ b/simias/configure.in
@@ -617,6 +617,7 @@ src/server/setup/Makefile
 src/server/Simias.HttpFile/Makefile
 src/server/Simias.Rss/Makefile
 src/server/Simias.Server/Makefile
+src/server/Simias.LdapProvider/Makefile
 src/server/usercmd/Makefile
 src/server/usercmd/simias-create-user
 src/server/usercmd/simias-delete-user
