--- a/simias/src/server/Simias.Server/Simias.Server.csproj
+++ b/simias/src/server/Simias.Server/Simias.Server.csproj
@@ -86,7 +86,7 @@
                 />
                 <Reference
                     Name = "System.XML"
-                    AssemblyName = "System.XML"
+                    AssemblyName = "System.Xml"
                     HintPath = "..\..\..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.XML.dll"
                 />
                 <Reference
@@ -97,22 +97,17 @@
                 <Reference
                     Name = "SimiasLib"
                     AssemblyName = "SimiasLib"
-                    HintPath = "..\..\..\..\stage\web\bin\SimiasLib.dll"
+                    HintPath = "..\..\core\SimiasLib.dll\SimiasLib.dll"
                 />
                 <Reference
                     Name = "SimiasClient"
                     AssemblyName = "SimiasClient"
-                    HintPath = "..\..\..\..\stage\web\bin\SimiasClient.dll"
+                    HintPath = "..\..\core\SimiasClient\SimiasClient.dll"
                 />
             </References>
         </Build>
         <Files>
             <Include>
-                <File
-                    RelPath = "Ajax.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
                 <File
                     RelPath = "Authentication.cs"
                     SubType = "Code"
@@ -172,21 +167,6 @@
                     RelPath = "ProvisionInfo.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Register.aspx"
-                    BuildAction = "Content"
-                />
-                <File
-                    RelPath = "Register.aspx.cs"
-                    DependentUpon = "Register.aspx"
-                    SubType = "ASPXCodeBehind"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Register.aspx.resx"
-                    DependentUpon = "Register.aspx.cs"
-                    BuildAction = "EmbeddedResource"
                 />
                 <File
                     RelPath = "Registration.asmx"
