git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6274 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/Simias.HttpFile/Simias.HttpFile.csproj
+++ b/simias/src/server/Simias.HttpFile/Simias.HttpFile.csproj
@@ -87,12 +87,12 @@
                 <Reference
                     Name = "SimiasLib"
                     AssemblyName = "SimiasLib"
-                    HintPath = "..\..\..\..\stage\web\bin\SimiasLib.dll"
+                    HintPath = "..\..\core\SimiasLib.dll\SimiasLib.dll"
                 />
                 <Reference
                     Name = "SimiasClient"
                     AssemblyName = "SimiasClient"
-                    HintPath = "..\..\..\..\stage\web\bin\SimiasClient.dll"
+                    HintPath = "..\..\core\SimiasClient\SimiasClient.dll"
                 />
             </References>
         </Build>
