--- a/simias/src/server/Simias.config.in
+++ b/simias/src/server/Simias.config.in
@@ -9,6 +9,13 @@
 	<setting name="SimiasAuthNotRequired" value="Registration.asmx, Login.ashx, Simias.asmx:PingSimias, DomainService.asmx:GetDomainID, pubrss.ashx, pubsfile.ashx" />
 	<setting name="SimiasRequireSSL" value="no" />
   </section>
+  <section name="LdapAuthentication">
+	<setting name="LdapUri" value="@LdapUriValue@" />
+	<setting name="ProxyDN" value="@ProxyDNValue@" />
+  </section>
+  <section name="LdapProvider">
+	<setting name="NamingAttribute" value="cn" />
+  </section>
   <section name="Identity">
 	<setting name="Assembly" value="Simias.Server" />
 	<setting name="Class" value="Simias.Server.InternalUser" />
@@ -19,6 +26,10 @@
 	<!--
 	<setting name="Assembly" value="Simias.MdbSync" />
 	<setting name="Class" value="Simias.MdbSync.User" />
+	-->
+	<!--
+	<setting name="Assembly" value="Simias.LdapProvider" />
+	<setting name="Class" value="Simias.LdapProvider.User" />
 	-->
   </section>
   <section name="StoreProvider">
