linux and darwin ldap libraries are gac'd
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6276 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/Simias.LdapProvider/Makefile.am
+++ b/simias/src/server/Simias.LdapProvider/Makefile.am
@@ -5,8 +5,15 @@ LdapProvider_CSFILES = $(srcdir)/AssemblyInfo.cs $(srcdir)/LdapSettings.cs $(src
 LdapProvider_CSFILES_CSC := $(subst /,$(SEP),$(LdapProvider_CSFILES))
 LdapProvider_INCLUDES =
 LdapProvider_RESOURCES =
+
 LdapProvider_FLAGS = $(CSC_LIBFLAG)
+
+if WINDOWS
 LdapProvider_LIBPATH = ../Simias.Server ../../core/SimiasLib.dll ../../core/SimiasClient ../../../external/csharpldap $(DESTDIR)$(webbindir)
+else
+LdapProvider_LIBPATH = ../Simias.Server ../../core/SimiasLib.dll ../../core/SimiasClient $(DESTDIR)$(webbindir)
+endif
+
 LdapProvider_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll SimiasLib.dll SimiasClient.dll Simias.Server.dll Novell.Directory.Ldap.dll
 
 EXTRA_DIST = $(LdapProvider_CSFILES) 
