Moved Identity Sync web service methods to the iFolder Admin web service.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6278 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webservices/Makefile.am
+++ b/simias/src/webservices/Makefile.am
@@ -29,7 +29,9 @@ iFolderWebService_CSFILES = \
 	$(srcdir)/ChangeEntry.cs \
 	$(srcdir)/NodeUtility.cs \
 	$(srcdir)/IdentityPolicy.cs \
-	$(srcdir)/SampleData.cs
+	$(srcdir)/SampleData.cs \
+	$(srcdir)/LastSyncInfo.cs \
+	$(srcdir)/SyncServiceInfo.cs
 	
 	
 iFolderWebService_WEBFILES = \
