Updated solution file for changes made in the web service.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6287 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webservices/iFolder.WebService.csproj
+++ b/simias/src/webservices/iFolder.WebService.csproj
@@ -223,6 +223,11 @@
                     BuildAction = "EmbeddedResource"
                 />
                 <File
+                    RelPath = "LastSyncInfo.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Makefile.am"
                     BuildAction = "None"
                 />
@@ -253,6 +258,11 @@
                 />
                 <File
                     RelPath = "SmartException.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "SyncServiceInfo.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
