--- a/simias/src/admin/Admin.csproj
+++ b/simias/src/admin/Admin.csproj
@@ -219,6 +219,22 @@
                     BuildAction = "EmbeddedResource"
                 />
                 <File
+                    RelPath = "Footer.ascx"
+                    SubType = "UserControl"
+                    BuildAction = "Content"
+                />
+                <File
+                    RelPath = "Footer.ascx.cs"
+                    DependentUpon = "Footer.ascx"
+                    SubType = "ASPXCodeBehind"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "Footer.ascx.resx"
+                    DependentUpon = "Footer.ascx.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "Global.asax"
                     SubType = "Component"
                     BuildAction = "Content"
@@ -344,6 +360,22 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "ListFooter.ascx"
+                    SubType = "UserControl"
+                    BuildAction = "Content"
+                />
+                <File
+                    RelPath = "ListFooter.ascx.cs"
+                    DependentUpon = "ListFooter.ascx"
+                    SubType = "ASPXCodeBehind"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "ListFooter.ascx.resx"
+                    DependentUpon = "ListFooter.ascx.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "Log4Net.config"
                     BuildAction = "Content"
                 />
@@ -392,22 +424,6 @@
                 <File
                     RelPath = "MemberSelect.aspx.resx"
                     DependentUpon = "MemberSelect.aspx.cs"
-                    BuildAction = "EmbeddedResource"
-                />
-                <File
-                    RelPath = "PageFooter.ascx"
-                    SubType = "UserControl"
-                    BuildAction = "Content"
-                />
-                <File
-                    RelPath = "PageFooter.ascx.cs"
-                    DependentUpon = "PageFooter.ascx"
-                    SubType = "ASPXCodeBehind"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "PageFooter.ascx.resx"
-                    DependentUpon = "PageFooter.ascx.cs"
                     BuildAction = "EmbeddedResource"
                 />
                 <File
