added the provision system from Russ' enterprise code.  added code documentation
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/multiserver@6303 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/server/Simias.Server/Makefile.am
+++ b/src/server/Simias.Server/Makefile.am
@@ -8,9 +8,13 @@ SimiasServer_CSFILES = \
 	$(srcdir)/DomainInfo.cs \
 	$(srcdir)/ProvisionInfo.cs \
 	$(srcdir)/DomainService.asmx.cs \
+	$(srcdir)/HostProvider.cs \
+	$(srcdir)/HostService.cs \
 	$(srcdir)/IdentitySyncService.cs \
 	$(srcdir)/IIdentitySyncProvider.cs \
 	$(srcdir)/IdentitySyncManager.asmx.cs \
+	$(srcdir)/IProvisionUser.cs \
+	$(srcdir)/ProvisionInfo.cs \
 	$(srcdir)/Registration.asmx.cs \
 	$(srcdir)/IUserProvider.cs \
 	$(srcdir)/User.cs \
