--- a/src/core/SimiasApp/Simias.csproj
+++ b/src/core/SimiasApp/Simias.csproj
@@ -99,6 +99,11 @@
                     Project = "{E38BAF80-9B31-4D15-A002-E775B96FAFA6}"
                     Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
                 />
+                <Reference
+                    Name = "log4net"
+                    AssemblyName = "log4net"
+                    HintPath = "..\..\..\external\log4net\bin\net\1.1\release\log4net.dll"
+                />
             </References>
         </Build>
         <Files>
