--- a/src/core/SyncService/SyncService.csproj
+++ b/src/core/SyncService/SyncService.csproj
@@ -91,13 +91,13 @@
                 />
                 <Reference
                     Name = "SimiasClient"
-                    Project = "{E38BAF80-9B31-4D15-A002-E775B96FAFA6}"
-                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                    AssemblyName = "SimiasClient"
+                    HintPath = "..\SimiasClient\SimiasClient.dll"
                 />
                 <Reference
                     Name = "SimiasLib"
-                    Project = "{7839E703-0177-4162-B083-BCFD4ED1CC1B}"
-                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                    AssemblyName = "SimiasLib"
+                    HintPath = "..\SimiasLib.dll\SimiasLib.dll"
                 />
             </References>
         </Build>
