--- a/src/core/WebService/SimiasWebService.csproj
+++ b/src/core/WebService/SimiasWebService.csproj
@@ -96,8 +96,8 @@
                 />
                 <Reference
                     Name = "SimiasLib"
-                    Project = "{7839E703-0177-4162-B083-BCFD4ED1CC1B}"
-                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                    AssemblyName = "SimiasLib"
+                    HintPath = "..\SimiasLib.dll\SimiasLib.dll"
                 />
             </References>
         </Build>
