--- a/src/server/Simias.Server/Simias.Server.csproj
+++ b/src/server/Simias.Server/Simias.Server.csproj
@@ -86,7 +86,7 @@
                 />
                 <Reference
                     Name = "System.XML"
-                    AssemblyName = "System.XML"
+                    AssemblyName = "System.Xml"
                     HintPath = "..\..\..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.XML.dll"
                 />
                 <Reference
@@ -97,22 +97,22 @@
                 <Reference
                     Name = "SimiasLib"
                     AssemblyName = "SimiasLib"
-                    HintPath = "..\..\..\..\stage\web\bin\SimiasLib.dll"
+                    HintPath = "..\..\core\SimiasLib.dll\SimiasLib.dll"
                 />
                 <Reference
                     Name = "SimiasClient"
                     AssemblyName = "SimiasClient"
-                    HintPath = "..\..\..\..\stage\web\bin\SimiasClient.dll"
+                    HintPath = "..\..\core\SimiasClient\SimiasClient.dll"
+                />
+                <Reference
+                    Name = "log4net"
+                    AssemblyName = "log4net"
+                    HintPath = "..\..\..\external\log4net\bin\net\1.1\release\log4net.dll"
                 />
             </References>
         </Build>
         <Files>
             <Include>
-                <File
-                    RelPath = "Ajax.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
                 <File
                     RelPath = "Authentication.cs"
                     SubType = "Code"
@@ -139,6 +139,16 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "HostProvider.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "HostService.cs"
+                    SubType = "Component"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "IdentitySyncManager.asmx"
                     BuildAction = "Content"
                 />
@@ -159,6 +169,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "IProvisionUser.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "IUserProvider.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
@@ -172,21 +187,6 @@
                     RelPath = "ProvisionInfo.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Register.aspx"
-                    BuildAction = "Content"
-                />
-                <File
-                    RelPath = "Register.aspx.cs"
-                    DependentUpon = "Register.aspx"
-                    SubType = "ASPXCodeBehind"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Register.aspx.resx"
-                    DependentUpon = "Register.aspx.cs"
-                    BuildAction = "EmbeddedResource"
                 />
                 <File
                     RelPath = "Registration.asmx"
@@ -205,6 +205,11 @@
                 />
                 <File
                     RelPath = "User.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "Utils.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
