show detailed errors for now
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6306 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/Web.config
+++ b/simias/src/webaccess/Web.config
@@ -34,7 +34,7 @@
     -->
     <customErrors
 		defaultRedirect="Error.aspx"
-		mode="RemoteOnly"
+		mode="Off"
     /> 
 
     <!--  AUTHENTICATION 
