Added Footer.ascx and Footer.ascx.cs back into the build.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6314 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/Makefile.am
+++ b/simias/src/admin/Makefile.am
@@ -10,6 +10,7 @@ iFolderAdmin_CSFILES = \
 	$(srcdir)/Error.aspx.cs \
 	$(srcdir)/FileSizeFilter.ascx.cs \
 	$(srcdir)/FileTypeFilter.ascx.cs \
+	$(srcdir)/Footer.ascx.cs \
 	$(srcdir)/Global.asax.cs \
 	$(srcdir)/Header.ascx.cs \
 	$(srcdir)/iFolderAdminPage.aspx.cs \
@@ -67,6 +68,7 @@ iFolderAdmin_FORMS = \
 	Error.aspx \
 	FileSizeFilter.ascx \
 	FileTypeFilter.ascx \
+	Footer.ascx \
 	Global.asax \
 	Header.ascx \
 	iFolderAdminPage.aspx \
