--- a/src/server/Simias.Server/Simias.Server.csproj
+++ b/src/server/Simias.Server/Simias.Server.csproj
@@ -149,6 +149,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "HostService.resx"
+                    DependentUpon = "HostService.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "IdentitySyncManager.asmx"
                     BuildAction = "Content"
                 />
