--- a/simias/src/server/Simias.LdapProvider/Simias.LdapProvider.csproj
+++ b/simias/src/server/Simias.LdapProvider/Simias.LdapProvider.csproj
@@ -81,7 +81,7 @@
                 />
                 <Reference
                     Name = "System.XML"
-                    AssemblyName = "System.XML"
+                    AssemblyName = "System.Xml"
                     HintPath = "..\..\..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.XML.dll"
                 />
                 <Reference
@@ -115,6 +115,7 @@
             <Include>
                 <File
                     RelPath = "AssemblyInfo.cs"
+                    SubType = "Code"
                     BuildAction = "Compile"
                 />
                 <File
