changed the apache setup so only ifolder_apache.conf needs to be symlinked in to work.  also added example config for multi-domain
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6329 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -634,9 +634,15 @@ src/admin/Makefile
 src/admin/AssemblyInfo.cs
 src/setup/Makefile
 src/setup/apache/Makefile
-src/setup/apache/ifolder_admin.conf
-src/setup/apache/ifolder_webaccess.conf
-src/setup/apache/simias_server.conf
+src/setup/apache/ifolder_apache.conf
+src/setup/apache/default/Makefile
+src/setup/apache/default/ifolder_admin.conf
+src/setup/apache/default/ifolder_webaccess.conf
+src/setup/apache/default/simias_server.conf
+src/setup/apache/example.com/Makefile
+src/setup/apache/example.com/ifolder_admin.conf
+src/setup/apache/example.com/ifolder_webaccess.conf
+src/setup/apache/example.com/simias_server.conf
 test/Makefile
 test/Common/Makefile
 test/ChangeLog/Makefile
