--- a/simias/src/setup/apache/Makefile.am
+++ b/simias/src/setup/apache/Makefile.am
@@ -1,15 +1,15 @@
-SUBDIRS = 
+SUBDIRS = default example.com
 
 DIST_SUBDIRS = $(SUBDIRS)
 
-EXTRA_DIST = ifolder_admin.conf.in ifolder_webaccess.conf.in simias_server.conf.in
+EXTRA_DIST = ifolder_apache.conf.in
 
 install-exec-local:
-	$(mkinstalldirs) $(DESTDIR)$(simiasconfdir)
-	$(INSTALL_PROGRAM) ifolder_admin.conf ifolder_webaccess.conf simias_server.conf $(DESTDIR)$(simiasconfdir)	
+	$(mkinstalldirs) $(DESTDIR)$(simiasconfdir)/apache
+	$(INSTALL_PROGRAM) ifolder_apache.conf $(DESTDIR)$(simiasconfdir)/apache
 
 uninstall-local:
-	cd $(DESTDIR)$(simiasconfdir); rm -f ifolder_admin.conf ifolder_webaccess.conf simias_server.conf 
+	cd $(DESTDIR)$(simiasconfdir)/apache; rm -f ifolder_apache.conf
 
 installcheck-summary:
 
@@ -18,5 +18,5 @@ clean-local:
 distclean-local:
 
 maintainer-clean-local:
-	rm -f ifolder_admin.conf ifolder_webaccess.conf simias_server.conf 
+	rm -f ifolder_apache.conf
 
