Finished error handling code.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6332 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/Admin.csproj
+++ b/simias/src/admin/Admin.csproj
@@ -552,6 +552,10 @@
                     BuildAction = "Content"
                 />
                 <File
+                    RelPath = "css\Error.css"
+                    BuildAction = "Content"
+                />
+                <File
                     RelPath = "css\iFolderAdmin.css"
                     BuildAction = "Content"
                 />
