Added log file configuration to webaccess.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6339 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -659,6 +659,7 @@ src/webservices/Makefile
 src/webservices/AssemblyInfo.cs
 src/webaccess/Makefile
 src/webaccess/AssemblyInfo.cs
+src/webaccess/Log4Net.config
 src/admin/Makefile
 src/admin/AssemblyInfo.cs
 src/admin/Log4Net.config
