Changed the default log directory to be simiasdatadir.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6341 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -496,13 +496,13 @@ AC_ARG_WITH(runasclient,
 	case $SIMIAS_OS in
 		windows) 
 			simiasdatadir=`cygpath --windows "$USERPROFILE/Local Settings/Application Data/simias"`
-			simiaslogdir="${simiasdatadir}\\log" ;;
+			simiaslogdir="${simiasdatadir}" ;;
 		linux) 
 			simiasdatadir="$HOME/.local/share/simias"
-			simiaslogdir="${simiasdatadir}/log" ;;
+			simiaslogdir="${simiasdatadir}" ;;
 		darwin) 
 			simiasdatadir="$HOME/.local/share/simias"
-			simiaslogdir="${simiasdatadir}/log" ;;
+			simiaslogdir="${simiasdatadir}" ;;
 	esac],
 	[runasclient="FALSE"]
 	)
@@ -543,8 +543,8 @@ AC_ARG_WITH(simiaslogdir,
 	esac],
 	[if test "$runasclient" = "FALSE"; then
 		case $SIMIAS_OS in
-			windows) simiaslogdir="${simiasdatadir}\\log" ;;
-			*) simiaslogdir="${simiasdatadir}/log" ;;
+			windows) simiaslogdir="${simiasdatadir}" ;;
+			*) simiaslogdir="${simiasdatadir}" ;;
 		esac
 	fi]
 	)
