moved tabs to the left
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6344 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/Makefile.am
+++ b/simias/src/webaccess/Makefile.am
@@ -22,7 +22,9 @@ iFolderWeb_CSFILES = \
 	$(srcdir)/Login.aspx.cs \
 	$(srcdir)/Message.ascx.cs \
 	$(srcdir)/Pagging.ascx.cs \
-	$(srcdir)/Context.ascx.cs \
+	$(srcdir)/HomeContext.ascx.cs \
+	$(srcdir)/iFolderContext.ascx.cs \
+	$(srcdir)/TabControl.ascx.cs \
 	$(srcdir)/Share.aspx.cs \
 	$(srcdir)/iFolderNew.aspx.cs \
 	$(srcdir)/iFolderEdit.aspx.cs \
@@ -78,7 +80,9 @@ iFolderWeb_FORMS = \
 	Header.ascx \
 	Message.ascx \
 	Pagging.ascx \
-	Context.ascx \
+	HomeContext.ascx \
+	iFolderContext.ascx \
+	TabControl.ascx \
 	Download.ashx \
 	Log4Net.config \
 	Web.config
