1. Added AD LDAP provider. 2. Fixed some bugs in eDir provider. 3. Added status to VerifyPassword method.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6354 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -647,6 +647,7 @@ src/server/Simias.HttpFile/Makefile
 src/server/Simias.Rss/Makefile
 src/server/Simias.Server/Makefile
 src/server/Simias.LdapProvider/Makefile
+src/server/Simias.ADLdapProvider/Makefile
 src/server/usercmd/Makefile
 src/server/usercmd/simias-create-user
 src/server/usercmd/simias-delete-user
