--- a/simias/src/server/Makefile.am
+++ b/simias/src/server/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = Simias.Server Simias.HttpFile Simias.Rss Simias.LdapProvider usercmd
+SUBDIRS = Simias.Server Simias.HttpFile Simias.Rss Simias.LdapProvider Simias.ADLdapProvider usercmd
 
 DIST_SUBDIRS = $(SUBDIRS) setup
 
