--- a/simias/src/webaccess/Web.config
+++ b/simias/src/webaccess/Web.config
@@ -34,7 +34,7 @@
     -->
     <customErrors
 		defaultRedirect="Error.aspx"
-		mode="Off"
+		mode="RemoteOnly"
     /> 
 
     <!--  AUTHENTICATION 
