added generic settings functionality
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6363 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webservices/Makefile.am
+++ b/simias/src/webservices/Makefile.am
@@ -27,6 +27,7 @@ iFolderWebService_CSFILES = \
 	$(srcdir)/iFolderFile.cs \
 	$(srcdir)/MemberRole.cs \
 	$(srcdir)/ChangeEntry.cs \
+	$(srcdir)/Settings.cs \
 	$(srcdir)/NodeUtility.cs \
 	$(srcdir)/IdentityPolicy.cs \
 	$(srcdir)/SampleData.cs \
