--- a/simias/src/webservices/iFolder.WebService.csproj
+++ b/simias/src/webservices/iFolder.WebService.csproj
@@ -257,6 +257,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Settings.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "SmartException.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
