updated the admin and webaccess example.com conf files to setup environments correctly
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6364 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/setup/apache/example.com/ifolder_admin.conf.in
+++ b/simias/src/setup/apache/example.com/ifolder_admin.conf.in
@@ -2,7 +2,7 @@ Include @MODMONO_CONFPATH@
 
 Alias /admin "@admindir@"
 AddMonoApplications exampleadmin "/admin:@admindir@"
-MonoSetEnv exampleadmin SimiasUrl=http://example.com:80
+MonoSetEnv exampleadmin SimiasUrl=http://example.com:80;SimiasLogDir=/var/lib/ifolder/example.com
 <Location /admin >
 	MonoSetServerAlias exampleadmin
 	Order allow,deny
